# ignition_assets

./: CMakeLists.txt  README.md  package.xml
hooks/: resource_paths.dsv.in  resource_paths.sh
launch/: ign_bridges.py  launch_simulation.py  model_bridges.py  world_bridges.py
models/3d_lidar/: model.config
models/crazyflie/: crazyflie.sdf  crazyflie.sdf.jinja
models/crazyflie/meshes/: cf2_assembly.dae
models/gps/: gps.sdf  model.config
models/hd_camera/: hd_camera.sdf
models/hexrotor_base/: hexrotor_base.sdf  hexrotor_base.sdf.jinja
models/mbzirc_point_lidar/: model.config
models/planar_lidar/: planar_lidar.sdf
models/point_lidar/: point_lidar.sdf
models/quadrotor_base/: model.sdf  multiple.sdf  quadrotor_base.sdf  quadrotor_base.sdf.jinja
models/rgbd_camera/: rgbd_camera.sdf
models/semantic_camera/: model.config  semantic_camera.sdf
models/usv_base/: model.config  usv_base.sdf  usv_base.sdf.jinja
models/vga_camera/: vga_camera.sdf
scripts/: jinja_gen.py  parse_json.py  run_ign.sh  sensor_template.xml.jinja  spawn_drones.sh
src/: gps_bridge.cpp  ground_truth_bridge.cpp  tf_broadcaster.cpp
src/ign_assets/: bridges.py  model.py
test/: config.json  config_cf.json  gps_test.json  test_config.sh  test_envvars.sh
worlds/: empty.sdf
