<?xml version="1.0"?>
<package format="3">
  <name>ignition_assets</name>
  <version>0.1.0</version>
  <description>Ignition Gazebo resources</description>

  <maintainer email="cvar.upm3@gmail.com">Computer Vision And Aerial Robotics Group (UPM)</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_ign_gazebo</depend>
  <depend>ros_ign_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
